--- a/integrations/tts.yaml
+++ b/integrations/tts.yaml
@@ -4,17 +4,18 @@
 #
 # https://www.home-assistant.io/integrations/google_translate/
 #
-platform: google_translate
+tts:
+  platform: google_translate
 
-# Set the default voice language.
-language: 'en'
+  # Set the default voice language.
+  language: 'en'
 
-# Cache voice files to a local storage.
-cache: true
+  # Cache voice files to a local storage.
+  cache: true
 
-# Path to a location for caching the tts files.
-cache_dir: /tmp/tts
+  # Path to a location for caching the tts files.
+  cache_dir: /tmp/tts
 
-# Time to hold (in seconds) the voice data inside memory for fast play
-# on a media player. (min 60, max 57600)
-time_memory: 300
+  # Time to hold (in seconds) the voice data inside memory for fast play
+  # on a media player. (min 60, max 57600)
+  time_memory: 300
