--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ __pycache__
 deps/
 known_devices.yaml
 tts/
+home-assistant.log
+home-assistant_v2.db
+home-assistant_v2.db-shm
+home-assistant_v2.db-wal
