--- a/integrations/default_config.yaml
+++ b/integrations/default_config.yaml
@@ -13,3 +13,5 @@
 default_config:
 http:
   server_port: !secret server_port # Custom access port for SSL
+  ssl_certificate: /keys/origin.pem
+  ssl_key: /keys/privkey.pem
