--- a/integrations/default_config.yaml
+++ b/integrations/default_config.yaml
@@ -11,7 +11,7 @@
 # zeroconf, person, scene, system_healt, and a lot more.
 #
 default_config:
-http:
-  server_port: !secret server_port # Custom access port for SSL
-  ssl_certificate: /ssl/origin.pem
-  ssl_key: /ssl/privkey.pem
+# http:
+#   server_port: !secret server_port # Custom access port for SSL
+#   ssl_certificate: /ssl/origin.pem
+#   ssl_key: /ssl/privkey.pem
