Massive config refactor 1

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,4 +1,4 @@
 
 homeassistant:
-  packages: !include_dir_named integrations
+  packages: !include_dir_named configuration
   customize: !include customize.yaml
